--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Birthday Message</title>
-    <link rel="stylesheet" href="C:\Users\rahul\Documents\Documents\Birthday\style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div id="balloons"></div>
         <p class="Message">Happy Birthday!! Brooo, Guruji, Sadiest........last but not least My Sweet Sister</p>
-        <button id="reveal-btn"><img src="C:\Users\rahul\Downloads\IMG20221217170316_01.jpg" class="one"><br>Click to Reveal Your Surprise!</button>
+        <button id="reveal-btn"><img src="IMG20221217170316_01.jpg" class="one"><br>Click to Reveal Your Surprise!</button>
         <p id="surprise-message" class="hidden">Wishing you a fantastic year ahead filled with joy and success. Be like the inner child in you forever. Thank you for the period which you have been with me. Forever thankful to you for that and Thank you for being My Sweet Sister.I Hope the bond will be forever exist the same way.
         Some times the god provide luck by giving the frnds as a family to support us. And In Btech I got you.</p>
         <button id="second-btn"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSM39V-Gb-jDa9Nd_hNpb_VC26WR_P8nY1ZQ&s"><br>Click On Me</button><p id="second-message" class="hidden" id="surprise-message">Once Again Happy Birthday To My Support System ❌ Na Tsunami, Na Nammakam, Na Dhairyam, What Not...............<br>
-            <img src="C:\Users\rahul\Downloads\Snapchat-368740707.jpg" class="one"></p>
+            <img src="Snapchat-368740707.jpg" class="one"></p>
     </div>
 
-    <script src="C:\Users\rahul\Documents\Documents\Birthday\script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
